<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6934F"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnmusic"
        android:layout_width="355dp"
        android:layout_height="59dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="22dp"
        android:text="@string/music"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btndraw" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="106dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <Button
        android:id="@+id/btncyber"
        android:layout_width="355dp"
        android:layout_height="59dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="22dp"
        android:text="@string/cybersport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btndraw"
        android:layout_width="355dp"
        android:layout_height="59dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="22dp"
        android:text="@string/draw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncyber" />

    <Button
        android:id="@+id/btnpolit"
        android:layout_width="355dp"
        android:layout_height="59dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="22dp"
        android:text="@string/politics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmusic" />

    <Button
        android:id="@+id/btnsport"
        android:layout_width="355dp"
        android:layout_height="59dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="22dp"
        android:text="@string/sport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnpolit" />

    <TextView
        android:id="@+id/tvchoose"
        android:layout_width="194dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/choose"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>